# cis566_finalproj

./: CMakeLists.txt  README.md  simple_run.sh
include/: app.h  dummy_morph_shaders.h  types.h  utils.h
include/glad/: glad.h
include/shaders/: basic_morph_shaders.h  growth_morph_shaders.h  morph_shaders.h  render_shaders.h  test_shaders.h
morph_shaders/: basic_morph_shaders.h  growth.glsl
shaders/: growth.glsl  render_frag.glsl  render_vert.glsl
src/: app.cpp  glad.c  main.cpp  old_junk.cpp  types.cpp  utils.cpp
